# imrtcl

./: .gitignore  CMakeLists.txt  Makefile  README.md  Win-Makefile  model.h
OpenCL-Mac/: camera.c  camera.h  cl_util.c  cl_util.h  file_io.c  file_io.h  gl_util.c  gl_util.h  kernels.cl  main.c  mat4x4.c  mat4x4.h  material.c  material.h  vector.c  vector.h
OpenCL-Mac.xcodeproj/: project.pbxproj
OpenCL-Mac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenCL-Mac.xcodeproj/xcuserdata/imm.xcuserdatad/xcschemes/: OpenCL-Mac.xcscheme  xcschememanagement.plist
OpenCL-Mac/kernels/: gl_sample.cl  nbody_sim.cl  ray_tracer.cl
OpenCL-Mac/shaders/: simple.fs  simple.vs
include/: camera.h  cl_util.h  file_io.h  gl_util.h  mat4x4.h  material.h  surface.h  vector.h
kernels/: gl_sample.cl  ray_tracer.cl
src/: camera.c  cl_util.c  file_io.c  gl_util.c  main.c  mat4x4.c  material.c  model.c  surface.c  vector.c
